<resources>
    <string name="app_name">Travon</string>
    <integer name="google_play_services_version">12211000</integer>

    <!--Error messages -->
    <string name="try_again_later">There was an error. Please try again later</string>
    <string name="null_item">Item content is null</string>

    <!-- Shortcuts -->
    <string name="weatherStr">Weather</string>
    <string name="eventsStr">Events</string>
    <string name="newsStr">News</string>

    <!-- Menu -->
    <string name="welcoming">Welcoming</string>
    <string name="recommendedPlaces">Recommended places</string>
    <string name="costOfLiving">Cost of living</string>
    <string name="findingRooms">Finding rooms</string>
    <string name="services">Services</string>
    <string name="immigration">Immigration</string>
    <string name="title_activity_recommended_places_screen">RecommendedPlacesScreen</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="voice_command_text">Say a place name</string>

    <string name="search_hint">Enter a place</string>

    <!--Weather-->
    <string name="weather_image">Weather Image</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_recommended_places">RecommendedPlacesActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="no_results">No Results</string>
    <string name="weather_city_name">City</string>
    <string name="weather_temprature">Temprature</string>
    <string name="weather_minmax_temprature">Min/Max temprature</string>
    <string name="weather_item_description">Description</string>
    <string name="weather_item_date">Date</string>
    <string name="weather_item_time">Time</string>




    <!-- Cost of living -->
    <string name="cost_of_living_title">Cost of living in </string>
    <string name="last_updated_value">Last updated: %1$s/%2$s </string>
    <string name="transport">Transport</string>
    <string name="room">Room</string>
    <string name="food">Food</string>
    <string name="clothing">Clothing</string>
    <string name="childcare">Childcare</string>
    <string name="utilities">Utilities</string>
    <string name="name">Name</string>
    <string name="avgCost">Avg. </string>
    <string name="range">Range</string>
    <string name="last_updated">Last updated</string>

    <!-- Immigration -->
    <string name="things_to_do">Important Things To Do</string>
    <string name="forms">Forms</string>
    <string name="offices">Offices</string>
    <string name="faq">FAQ</string>


    <!-- Welcoming -->
    <string name="welcoming_title">Welcome to %1$s! </string>
    <string name="lorem_ipsum">Lorem ipsum  </string>

    <!-- Events -->
    <string name="free">FREE</string>
    <string name="back_to_map">Back to map</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="prev_page">Prev</string>
    <string name="next_page">Next</string>
    <string name="search_query">Search Query</string>
    <string name="distance_advanced_search">Distance from location (km)</string>
    <string name="free_checkbox_text">Show free events only?</string>
    <string name="searchEventText">SEARCH</string>

    <!-- Placeholder -->
    <string name="placeholder">placeholder</string>

    <!--Finding Rooms-->
    <string name="Rooms_short_description">Short Description</string>
    <string name="Rooms_phone_number">Phone Number</string>
    <string name="Rooms_location">Location</string>



</resources>
