<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.WeatherActivity">

    <!--Linear Layout to display today's weather-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="vertical">
        <!--City label-->
        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/weather_city_name"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!--Weather Image Icon-->
        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:text="@string/weather_image"
            android:contentDescription="@string/weather_image" />

        <!--Temperature  Label-->
        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/weather_temprature"
            android:textSize="70sp"
            android:textStyle="bold" />

        <!--Maximum/Minimum Temperature  Label-->
        <TextView
            android:id="@+id/minMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/weather_minmax_temprature"
            android:fontFamily="@font/raleway"
            android:textSize="20sp" />

        <!--Description Label-->
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/raleway"
            android:textSize="25sp" />

        <!--Inner Linear Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <!--Humidity Label-->
            <TextView
                android:id="@+id/humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:fontFamily="@font/raleway"
                android:textSize="20sp" />

            <!--Cloud Label-->
            <TextView
                android:id="@+id/clouds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/raleway"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


    <!--Iterative recycler view to display weather of 5 days/ 3 hourly data. -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/weatherRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"></android.support.v7.widget.RecyclerView>
</RelativeLayout>


