<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".30">

            <ImageView
                android:id="@+id/cityImageView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:tint="#6F000000" />

            <TextView
                android:id="@+id/cityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:padding="22dip"
                android:text="City name"
                android:textColor="@color/colorWhite"
                android:textSize="45sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".70"
            android:orientation="vertical"
            android:weightSum="7">

            <!-- Rows -->
            <!-- Buttons Row -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/weatherStr"
                    android:textColor="@android:color/white" />
                <!--   android:drawableLeft="@android:drawable/"-->

                <Button
                    android:id="@+id/eventsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:onClick="navigate"
                    android:text="@string/eventsStr"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/newsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:onClick="navigate"
                    android:text="@string/newsStr"
                    android:textColor="@android:color/white" />


            </LinearLayout>


            <!-- Options Rows -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".20"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/circle_shape"
                        android:cropToPadding="false"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".80">

                    <TextView
                        android:id="@+id/welcomeTxtView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:text="@string/welcoming"
                        android:textAlignment="textStart"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/recommendedPlacesRow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="openRecommendedPlaces"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".20"
                    android:clickable="false"
                    android:gravity="center"

                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/circle_shape"
                        android:clickable="false"
                        android:cropToPadding="false"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_recommended_place"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".80"
                    android:clickable="false"
                    android:onClick="openRecommendedplace">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:clickable="false"

                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:text="@string/recommendedPlaces"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".20"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/circle_shape"
                        android:cropToPadding="false"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".80">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:text="@string/costOfLiving"
                        android:textAlignment="textStart"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".20"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/circle_shape"
                        android:cropToPadding="false"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".80">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:text="@string/findingRooms"
                        android:textAlignment="textStart"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".20"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/circle_shape"
                        android:cropToPadding="false"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".80">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:text="@string/services"
                        android:textAlignment="textStart"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".20"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/circle_shape"
                        android:cropToPadding="false"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".80">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:text="@string/immigration"
                        android:textAlignment="textStart"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>